--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
         .bot-message-content li { margin-bottom: 0.25rem; }
         .bot-message-content p { margin-bottom: 0.5rem; }
         .bot-message-content p:last-child { margin-bottom: 0; }
+        .suggestion-button {
+            background-color: #4b5563; border: 1px solid #52525b;
+            padding: 0.25rem 0.75rem; border-radius: 9999px;
+            font-size: 0.75rem; line-height: 1rem; cursor: pointer;
+            transition: background-color 0.2s;
+        }
+        .suggestion-button:hover { background-color: #52525b; }
     </style>
 </head>
 <body class="bg-gray-900 text-gray-200 flex flex-col md:flex-row h-screen">
@@ -95,7 +102,10 @@
         <hr class="border-gray-700 my-4">
 
         <div class="flex-1 overflow-y-auto">
-            <h3 class="text-base font-semibold text-white mb-3">Processed Papers</h3>
+            <div class="flex justify-between items-center mb-3">
+                <h3 class="text-base font-semibold text-white">Processed Papers</h3>
+                <button id="clear-session-btn" class="text-xs text-gray-400 hover:text-white transition-colors">Clear Session</button>
+            </div>
             <div id="processed-papers-list" class="space-y-4">
                 <p class="text-sm text-gray-500">No papers processed yet.</p>
             </div>
@@ -138,6 +148,7 @@
         const processedPapersList = document.getElementById('processed-papers-list');
         const findCitationsBtn = document.getElementById('find-citations-btn');
         const citationsInput = document.getElementById('citations-input');
+        const clearSessionBtn = document.getElementById('clear-session-btn');
         const visualizerCanvas = document.getElementById('visualizer-canvas');
 
         let processedPapers = {};
@@ -191,6 +202,9 @@
                 processedPapers[url] = { title, ...result };
                 updateProcessedPapersList();
                 displayBotMessage(`Successfully processed "${title}". It's now available for global search and analysis.`);
+                if (result.suggested_questions) {
+                    displaySuggestedQuestions(result.suggested_questions);
+                }
             } catch (error) {
                 removeSystemMessages();
                 displaySystemMessage(`Error: ${error.message}`, 'error');
@@ -210,7 +224,7 @@
                 removeTypingIndicator();
                 if (!response.ok) { const err = await response.json(); throw new Error(err.error || "Unknown error."); }
                 const result = await response.json();
-                displayBotMessage(result.answer);
+                displayBotMessage(result.answer, result.context);
             } catch(error) {
                 removeTypingIndicator();
                 displaySystemMessage(error.message, 'error');
@@ -281,6 +295,21 @@
             } catch (error) {
                 removeTypingIndicator();
                 displaySystemMessage(error.message, 'error');
+            }
+        }
+
+        async function handleClearSession() {
+            showTypingIndicator("Clearing session...");
+            try {
+                await fetch(`${BACKEND_URL}/api/clear-session`, { method: 'POST' });
+                processedPapers = {};
+                updateProcessedPapersList();
+                chatContainer.innerHTML = '';
+                displayBotMessage("Session cleared. Find a new paper to begin.");
+                removeTypingIndicator();
+            } catch (error) {
+                removeTypingIndicator();
+                displaySystemMessage("Could not clear session. Is the server running?", 'error');
             }
         }
 
@@ -489,9 +518,22 @@
             return html || `<p>${safeText}</p>`;
         }
 
-        function displayBotMessage(text) {
-             const elem = document.createElement('div');
+        function displayBotMessage(text, context = null) {
+            const elem = document.createElement('div');
             elem.className = 'flex items-start gap-4 mb-6';
+            
+            let contextHtml = '';
+            if (context && Array.isArray(context)) {
+                contextHtml = `
+                    <div class="mt-3 pt-3 border-t border-gray-600">
+                        <p class="text-xs font-semibold text-gray-400 mb-1">Context Used:</p>
+                        <ul class="text-xs text-gray-500 list-disc list-inside space-y-1">
+                            ${context.map(c => `<li>${c.substring(0, 100)}...</li>`).join('')}
+                        </ul>
+                    </div>
+                `;
+            }
+
             elem.innerHTML = `
                 <div class="w-10 h-10 rounded-full bg-indigo-600 flex items-center justify-center flex-shrink-0">
                     <i class="fas fa-robot text-xl"></i>
@@ -499,8 +541,26 @@
                 <div class="bg-gray-700 p-4 rounded-lg max-w-2xl">
                     <p class="font-semibold text-white mb-1">Research Bot</p>
                     <div class="text-gray-300 bot-message-content">${formatResponseText(text)}</div>
+                    ${contextHtml}
                 </div>`;
             chatContainer.appendChild(elem);
+            scrollToBottom();
+        }
+        
+        function displaySuggestedQuestions(questions) {
+            const suggestionsContainer = document.createElement('div');
+            suggestionsContainer.className = 'flex flex-wrap gap-2 justify-center my-4';
+            questions.forEach(q => {
+                const button = document.createElement('button');
+                button.className = 'suggestion-button';
+                button.textContent = q;
+                button.onclick = () => {
+                    chatInput.value = q;
+                    handleGlobalSendMessage();
+                };
+                suggestionsContainer.appendChild(button);
+            });
+            chatContainer.appendChild(suggestionsContainer);
             scrollToBottom();
         }
 
@@ -538,21 +598,21 @@
             chatContainer.scrollTop = chatContainer.scrollHeight;
         }
 
-        // FIX: Move event listener setup to the end of the script
-        // to ensure all handler functions are defined first.
+        // --- Event Listener Setup ---
         document.addEventListener('DOMContentLoaded', () => {
             const keywordSearchBtn = document.getElementById('keyword-search-btn');
             const urlProcessBtn = document.getElementById('url-process-btn');
             const sendButton = document.getElementById('send-button');
-            const chatInput = document.getElementById('chat-input');
             const findCitationsBtn = document.getElementById('find-citations-btn');
             const micButton = document.getElementById('mic-button');
+            const clearSessionBtn = document.getElementById('clear-session-btn');
 
             keywordSearchBtn.addEventListener('click', handleKeywordSearch);
             urlProcessBtn.addEventListener('click', () => handleProcessPaper(paperUrlInput.value, 'Direct URL Paper'));
             sendButton.addEventListener('click', handleGlobalSendMessage);
             chatInput.addEventListener('keydown', (e) => { if (e.key === 'Enter' && !e.shiftKey) { e.preventDefault(); handleGlobalSendMessage(); } });
             findCitationsBtn.addEventListener('click', handleFindCitations);
+            clearSessionBtn.addEventListener('click', handleClearSession);
             micButton.addEventListener('mousedown', startRecording);
             micButton.addEventListener('mouseup', stopRecording);
             micButton.addEventListener('mouseleave', stopRecording);
@@ -561,4 +621,4 @@
         });
     </script>
 </body>
-</html>
+</ht
